; ModuleID = '/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_asllength.c_CgGetPackageLenByteCount.c'
source_filename = "/home/carl/AnghaBench/freebsd/sys/contrib/dev/acpica/compiler/extr_asllength.c_CgGetPackageLenByteCount.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@ASL_ERROR = common dso_local global i32 0, align 4
@ASL_MSG_ENCODING_LENGTH = common dso_local global i32 0, align 4
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i32)* @CgGetPackageLenByteCount to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @CgGetPackageLenByteCount(i32* %0, i32 %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32*, align 8
  %5 = alloca i32, align 4
  store i32* %0, i32** %4, align 8
  store i32 %1, i32* %5, align 4
  %6 = load i32, i32* %5, align 4
  %7 = icmp sle i32 %6, 62
  br i1 %7, label %8, label %9

8:                                                ; preds = %2
  store i32 1, i32* %3, align 4
  br label %30

9:                                                ; preds = %2
  %10 = load i32, i32* %5, align 4
  %11 = icmp sle i32 %10, 4093
  br i1 %11, label %12, label %13

12:                                               ; preds = %9
  store i32 2, i32* %3, align 4
  br label %30

13:                                               ; preds = %9
  %14 = load i32, i32* %5, align 4
  %15 = icmp sle i32 %14, 1048572
  br i1 %15, label %16, label %17

16:                                               ; preds = %13
  store i32 3, i32* %3, align 4
  br label %30

17:                                               ; preds = %13
  %18 = load i32, i32* %5, align 4
  %19 = icmp sle i32 %18, 268435451
  br i1 %19, label %20, label %21

20:                                               ; preds = %17
  store i32 4, i32* %3, align 4
  br label %30

21:                                               ; preds = %17
  %22 = load i32, i32* @ASL_ERROR, align 4
  %23 = load i32, i32* @ASL_MSG_ENCODING_LENGTH, align 4
  %24 = load i32*, i32** %4, align 8
  %25 = call i32 @AslError(i32 %22, i32 %23, i32* %24, i32* null)
  br label %26

26:                                               ; preds = %21
  br label %27

27:                                               ; preds = %26
  br label %28

28:                                               ; preds = %27
  br label %29

29:                                               ; preds = %28
  store i32 0, i32* %3, align 4
  br label %30

30:                                               ; preds = %29, %20, %16, %12, %8
  %31 = load i32, i32* %3, align 4
  ret i32 %31
}

declare dso_local i32 @AslError(i32, i32, i32*, i32*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
